fixing bookings list text alignment

--- a/src/index.css
+++ b/src/index.css
@@ -317,6 +317,7 @@ body {
   padding: 10px;
   font-size: 13px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  text-align: center;
 }
 .bookings-pane-booking-list-column {
 }
